--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,8 +21,9 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+	        		<li><a href="mailto:pyqzpxm@outlook.com">email</a></li>
+	        		<li><a href="https://github.com/mcsmallfeng">Github</a></li>
+				<li>Thank:hankquinlan</li>
 				</ul>
 			</footer>
 		</body>
