--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
 	    		<ul>
 	        		<li><a href="mailto:pyqzpxm@outlook.com">email</a></li>
 	        		<li><a href="https://github.com/mcsmallfeng">Github</a></li>
+				<li><a href="https://space.bilibili.com/627095723?spm_id_from=333.1007.0.0">Bilibili</a></li>
 				<li>Thank:hankquinlan</li>
 				</ul>
 			</footer>
